--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
             <div class="stat-card">⏱ <span data-i18n="time_spent">Time Spent</span> <span id="profile-time">0s</span></div>
           </div>
         </div>
+
+        <!-- ✅ Credits go here -->
+        <p id="credits" style="text-align:center; margin-top: 20px; font-size: 14px; color: gray;" data-i18n="credits">
+          This Game Was Made By: Ali Al-Junibi / Mumil Al-Junibi
+        </p>
       </div>
 
       <div id="game-screen" class="hidden fade-in">
